--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.11.4",
     "@next-auth/firebase-adapter": "^1.0.3",
     "@next/font": "^13.1.1",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
     "diff": "^5.1.0",
     "firebase": "^9.15.0",
@@ -23,6 +24,7 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-number-format": "^5.1.3",
     "react-redux": "^8.0.5",
     "slate": "^0.88.1",
     "slate-history": "^0.86.0",
