--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@lexical/react": "^0.7.6",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
-    "@next-auth/firebase-adapter": "^1.0.3",
-    "@next/font": "^13.1.1",
-    "@paypal/react-paypal-js": "^7.8.2",
-    "@reduxjs/toolkit": "^1.9.1",
-    "diff": "^5.1.0",
-    "firebase": "^9.15.0",
-    "firebaseui": "^6.0.2",
-    "jsdom": "^21.0.0",
-    "lexical": "^0.7.6",
-    "next": "latest",
-    "openai": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-number-format": "^5.1.3",
-    "react-redux": "^8.0.5",
-    "slate": "^0.88.1",
-    "slate-history": "^0.86.0",
-    "slate-hyperscript": "^0.77.0",
-    "slate-react": "^0.88.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
-  }
+	"homepage": ".",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@lexical/react": "^0.7.6",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.4",
+		"@next-auth/firebase-adapter": "^1.0.3",
+		"@next/font": "^13.1.1",
+		"@paypal/react-paypal-js": "^7.8.2",
+		"@reduxjs/toolkit": "^1.9.1",
+		"diff": "^5.1.0",
+		"firebase": "^9.15.0",
+		"firebaseui": "^6.0.2",
+		"jsdom": "^21.0.0",
+		"lexical": "^0.7.6",
+		"next": "latest",
+		"openai": "^3.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-number-format": "^5.1.3",
+		"react-redux": "^8.0.5",
+		"slate": "^0.88.1",
+		"slate-history": "^0.86.0",
+		"slate-hyperscript": "^0.77.0",
+		"slate-react": "^0.88.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.3",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.12",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.4",
+		"typescript": "4.9.4"
+	}
 }
