--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NEXT_PUBLIC_PAYPAL_CLIENT_ID = AQdpsun2L_Ua14FQIw0PNi8UfCO4QdDhiFmd5G9ibTpLtUMZj
 
 OPENAI_API_KEY = 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
 
-BLAH = Hy
+GOOGLE_API_KEY= AIzaSyA1X40EZvGfVy-xqD2zqRihZE4MBYiQAVE
