--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"firebase": "^9.15.0",
 		"firebase-functions": "^4.2.0",
 		"firebaseui": "^6.0.2",
+		"flowbite": "^1.6.3",
+		"flowbite-react": "^0.3.8",
 		"jsdom": "^21.0.0",
 		"lexical": "^0.7.6",
 		"next": "latest",
@@ -33,6 +35,7 @@
 		"slate-react": "^0.88.0"
 	},
 	"devDependencies": {
+		"@google-cloud/translate": "^7.1.0",
 		"@types/node": "18.11.3",
 		"@types/react": "18.0.21",
 		"@types/react-dom": "18.0.6",
